Refactored methods, added swagger documentation
